# alison_s-SDK

./: README.md  design.md  pyproject.toml
src/lotr-sdk-aastimson/: lotr_sdk_aastimson.py
